The overlap only occurs in phone scaling, so I'll change it to fixed or sticky once I start on that

--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,5 +1,5 @@
 footer {
-    position: sticky;
+    position: absolute;
     height: 60px;
     width: 100%;
     background-color: white;
